--- a/css/styles.css
+++ b/css/styles.css
@@ -13,16 +13,44 @@
     font-family: 'Rubik', sans-serif;
 }
 
-h1 a {
-    color: #ededed;
-    font-size: 70%;
-    font-family: sarina;
+.nav-logo {
+    float: left;
+
 }
 
-h1 a:hover {
+.navlist {
+    float: right;
+}
+
+ul {
+    float: right;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    margin-top: 19px;
+    overflow: hidden;
+    background-color: #333;
+    position: fixed;
+    top: 0px;
+    right: 0;
+
+  }
+  
+  li {
+    float: left;
+  }
+  
+  li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+  }
+  
+  li a:hover {
     color: #7d7d7d;
-}
-
+  }
 
 h2 {
     margin-top: 40px;
