--- a/css/styles.css
+++ b/css/styles.css
@@ -52,25 +52,106 @@ ul {
     color: #7d7d7d;
   }
 
+.white-button {
+    display: inline-block;
+    transition: all .5s ease;
+    color: #fff;
+    border: 2px solid white;
+    text-align: center;
+    line-height: 1;
+    font-size: 17px;
+    background-color : transparent;
+    padding: 10px 20px;
+    outline: none;
+    border-radius: 4px;
+    text-decoration: none;
+    align-items: center;
+
+}
+
+.white-button:hover {
+    color: #001F3F;
+    background-color: #fff;
+}
+
+.home-container {
+    position: relative;  
+    width: 100%;  
+    height: 100px;
+}
+
+.home-left-block {
+    position: absolute;  
+    left: 0px;  
+    top: 300px;  
+    bottom: 0;  
+    width: 50%;  
+    box-sizing: border-box; 
+    padding: 0px;
+
+}
+
+.home-right-block {
+    position: absolute;  
+    top: 200px;  
+    right: 0;  
+    bottom: 0;  
+    width: 50%;  
+    box-sizing: border-box;  
+}
+
+.about-container {
+    position: relative;  
+    width: 120%;  
+    height: 100px;
+}
+
+.about-left-block {
+    position: fixed;  
+    left: 200px;  
+    top: 120px;  
+    bottom: 0;  
+    width: 10%;  
+    box-sizing: border-box; 
+
+}
+
+.about-right-block {
+    position: fixed;  
+    top: 340px;  
+    right: 100px;  
+    bottom: 0;  
+    width: 40%;  
+    box-sizing: border-box; 
+
+}
+
+.aboutme {
+    padding-top: 100px;
+
+}
+
 h2 {
     margin-top: 40px;
-    margin-left: 188px;
     color: #ededed;
-    text-align: center;
-    font-size: 500%;
-    font-family: anton;
+    text-align: left;
+    font-size: 400%;
+    font-family: Sarina;
     display: inline;
 }
 
-h2::after {
-    content:url(wavinghand.gif);
+h3 {
+    color: #ededed;
+    font-size: 200%;
+    padding-bottom: 30px;
 }
 
 
 p {
     color: #ededed;
     padding-bottom: 30px;
-    text-align: center;
+    text-align: left;
+    font-size: 120%;
 }
 
 body {
@@ -136,12 +217,3 @@ textarea {
     background: #ededed;
 
 }
-
-div::first-letter {
-    font-size: x-large;
-    padding-right: 1px;
-}
-
-div::first-line {
-    font-variant: small-caps;
-} 
