--- a/css/styles.css
+++ b/css/styles.css
@@ -205,7 +205,7 @@ ul {
 .contact-container {
     text-align: center;
     max-width: 600px;
-    display: fixed;
+    display: absolute;
     padding-left: 400px ;
 }
 
